--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build"
   },
-  "author": "kdchang",
+  "author": "wangjh",
   "license": "MIT",
   "dependencies": {
     "react": "^15.2.1",
