--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   "author": "wangjh",
   "license": "MIT",
   "dependencies": {
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "html-webpack-plugin": "^2.22.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "flow-bin": "^0.68.0",
+    "html-webpack-plugin": "^3.0.7",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1"
   }
 }
