--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
@@ -19,8 +20,13 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "0.28.11",
     "flow-bin": "^0.68.0",
     "html-webpack-plugin": "^3.0.7",
+    "less": "3.0.1",
+    "less-loader": "4.1.0",
+    "open-browser-webpack-plugin": "0.0.5",
+    "style-loader": "0.20.3",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
