--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,10 @@
 {
   "presets": [
-    "es2015",
-    "react"
+    "react",
+    "env",
+    "stage-0"
   ],
-  "plugins": []
+  "plugins": [
+    "transform-decorators-legacy"
+  ]
 }
