--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "babel-core": "^6.10.4",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-decorators": "6.24.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "6.24.1",
     "css-loader": "0.28.11",
     "flow-bin": "^0.68.0",
     "html-webpack-plugin": "^3.0.7",
